fix: overflow shadow in pets page

--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -704,6 +704,8 @@ html {
   justify-content: center;
   max-height: 1365px;
   overflow: hidden;
+  margin: -35px;
+  padding: 35px;
 }
 @media (max-width: 878px) {
   .pets {
